--- a/views/admin/view-coupon.ejs
+++ b/views/admin/view-coupon.ejs
@@ -80,7 +80,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-white" href="/admin/view-offer">
+            <a class="nav-link text-white" href="/admin/view-offers">
               <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
                 <i class="material-icons opacity-10">local_offer</i>
               </div>
