--- a/views/admin/view-offers.ejs
+++ b/views/admin/view-offers.ejs
@@ -236,7 +236,7 @@
                         $.ajax({
                             url: '/admin/cancelOffer',
                             type: 'PATCH',
-                            contentType: 'application/json',
+                            contentType: '  ication/json',
                             data: JSON.stringify({ offerId: offerId }),
                             success: function (response) {
                                 if (response.status) {
