--- a/views/users/product.ejs
+++ b/views/users/product.ejs
@@ -45,16 +45,12 @@
                                             src="/public/userImages/<%= product.image %>"
                                             data-zoom-image="/public/userImages/<%= product.image %>"
                                             alt="product image" />
-
-                                        <!-- <a href="#" id="btn-product-gallery" class="btn-product-gallery">
-                              <i class="icon-arrows"></i>
-                          </a> -->
                                     </figure>
                                     <!-- End .product-main-image -->
 
                                     <div id="product-zoom-gallery" class="product-image-gallery">
                                         <a class="product-gallery-item active" href="#"
-                                            data-image="/public/products/images/<%= product.image%>"
+                                            data-image="/public/products/images/<%= product.image %>"
                                             data-zoom-image="/public/userImages/<%= product.image %>">
                                             <img src="/public/userImages/<%= product.image %>"
                                                 alt="product side" />
@@ -68,14 +64,14 @@
                                         </a>
 
                                         <a class="product-gallery-item" href="#"
-                                            data-image="/public/products/images/<%= product.image%>"
-                                            data-zoom-image="/public/products/images/<%= product.image%>">
+                                            data-image="/public/products/images/<%= product.image %>"
+                                            data-zoom-image="/public/products/images/<%= product.image %>">
                                             <img src="/public/userImages/<%= product.image %>"
                                                 alt="product with model" />
                                         </a>
 
                                         <a class="product-gallery-item" href="#"
-                                            data-image="/public/products/images/<%= product.image%>"
+                                            data-image="/public/products/images/<%= product.image %>"
                                             data-zoom-image="/public/products/images/<%= product.image %>">
                                             <img src="/public/userImages/<%= product.image %>"
                                                 alt="product back" />
@@ -106,73 +102,56 @@
                                 </div>
                                 <!-- End .rating-container -->
 
-                                <div class="product-price">₹<%= product.price%>
-                                </div>
+                                <% if (product.offer) { %>
+                                    <div class="product-lable-badge" style="width: 70px; margin-bottom: 10px; background-color: red; color: white; padding-left: 10px; padding-right: 10px;">
+                                        <span class="product-lable" style="font-size: 12px;"><%= product.offer.percentage %>% OFF</span>
+                                    </div>
+                                    <div class="product-price"><del>₹<%= product.price %></del>&nbsp;&nbsp;₹<%= Math.floor(product.discountedPrice) %></div>
+                                <% } else { %>
+                                    <div class="product-price">₹<%= product.price %></div>
+                                <% } %>
                                 <!-- End .product-price -->
 
-                                <div class="product-content">
-                                    <p>
-                                        <%= product.description%>
-                                    </p>
+                                <div class="product-content">   
+                                    <p><%= product.description %></p>
                                 </div>
                                 <!-- End .product-content -->
 
-                                <div class="details-filter-row details-row-size">
-                                    <span>Category : <b>
-                                            <%= product.category %>
-                                        </b></span>
-
-                                    <div class="product-nav product-nav-thumbs">
-                                        <p></p>
-                                    </div>
-                                    <!-- End .product-nav -->
-                                </div>
+                                
                                 <!-- End .details-filter-row -->
-                                <% if (product.qty < 10 && product.qty>1) { %>
+
+                                <% if (product.qty < 10 && product.qty > 1) { %>
                                     <p class="mb-2 text-danger">
                                         Only <%= product.qty %> pieces left
                                     </p>
+                                <% } %>
+
+                                <div class="product-details-action">
+                                    <% if (product.qty === 0) { %>
+                                        <button disabled class="btn-product btn-cart">
+                                            <span>Out of Stock</span>
+                                        </button>
+                                    <% } else { %>
+                                        <button class="btn-product btn-cart">
+                                            <a onclick="addToCart('<%= product._id %>')" id="addToCartBtn_<%= product._id %>">
+                                                <span>add to cart</span>
+                                            </a>
+                                        </button>
                                     <% } %>
+                                    <div class="details-action-wrapper">
+                                        <a href="#" class="btn-product btn-wishlist" title="Wishlist"><span>Add to Wishlist</span></a>
+                                    </div>
+                                    <!-- End .details-action-wrapper -->
+                                </div>
+                                <!-- End .product-details-action -->
 
-                                        <div class="product-details-action">
-                                            <% if (product.qty===0) { %>
-
-                                                <button disabled class="btn-product btn-cart">
-                                                    <span>Out of Stock</span>
-                                                </button>
-                                                <% } else { %>
-                                                    <button class="btn-product btn-cart">
-                                                        <a   onclick="addToCart('<%= product._id %>')" id="addToCartBtn_<%= product._id %>">
-                                                            <span>add to cart</span>
-                                                        </a>
-                                                    </button>
-
-                                                    
-                                                    <% } %>
-                                                        <div class="details-action-wrapper">
-                                                            <a href="#" class="btn-product btn-wishlist"
-                                                                
-                                                                title="Wishlist"><span>Add to Wishlist</span></a>
-                                                        </div>
-                                                        <!-- End .details-action-wrapper -->
-                                        </div>
-                                        <!-- End .product-details-action -->
-
-                                        
-
-                                            <div class="social-icons social-icons-sm">
-                                                <span class="social-label">Share:</span>
-                                                <a href="#" class="social-icon" title="Facebook" target="_blank"><i
-                                                        class="icon-facebook-f"></i></a>
-                                                <a href="#" class="social-icon" title="Twitter" target="_blank"><i
-                                                        class="icon-twitter"></i></a>
-                                                <a href="#" class="social-icon" title="Instagram" target="_blank"><i
-                                                        class="icon-instagram"></i></a>
-                                                <a href="#" class="social-icon" title="Pinterest" target="_blank"><i
-                                                        class="icon-pinterest"></i></a>
-                                            </div>
-                                        </div>
-                                        <!-- End .product-details-footer -->
+                                <div class="social-icons social-icons-sm">
+                                    <span class="social-label">Share:</span>
+                                    <a href="#" class="social-icon" title="Facebook" target="_blank"><i class="icon-facebook-f"></i></a>
+                                    <a href="#" class="social-icon" title="Twitter" target="_blank"><i class="icon-twitter"></i></a>
+                                    <a href="#" class="social-icon" title="Instagram" target="_blank"><i class="icon-instagram"></i></a>
+                                    <a href="#" class="social-icon" title="Pinterest" target="_blank"><i class="icon-pinterest"></i></a>
+                                </div>
                             </div>
                             <!-- End .product-details -->
                         </div>
@@ -185,30 +164,23 @@
                 <div class="product-details-tab">
                     <ul class="nav nav-pills justify-content-center" role="tablist">
                         <li class="nav-item">
-                            <a class="nav-link active" id="product-desc-link" data-toggle="tab" href="#product-desc-tab"
-                                role="tab" aria-controls="product-desc-tab" aria-selected="true">Description</a>
+                            <a class="nav-link active" id="product-desc-link" data-toggle="tab" href="#product-desc-tab" role="tab" aria-controls="product-desc-tab" aria-selected="true">Description</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" id="product-shipping-link" data-toggle="tab"
-                                href="#product-shipping-tab" role="tab" aria-controls="product-shipping-tab"
-                                aria-selected="false">Shipping & Returns</a>
+                            <a class="nav-link" id="product-shipping-link" data-toggle="tab" href="#product-shipping-tab" role="tab" aria-controls="product-shipping-tab" aria-selected="false">Shipping & Returns</a>
                         </li>
                     </ul>
                     <div class="tab-content">
-                        <div class="tab-pane fade show active" id="product-desc-tab" role="tabpanel"
-                            aria-labelledby="product-desc-link">
+                        <div class="tab-pane fade show active" id="product-desc-tab" role="tabpanel" aria-labelledby="product-desc-link">
                             <div class="product-desc-content">
                                 <h3>Product Information</h3>
-                                <p>
-                                    <%= product.product_description%>
-                                </p>
+                                <p><%= product.product_description %></p>
                             </div>
                             <!-- End .product-desc-content -->
                         </div>
                         <!-- .End .tab-pane -->
 
-                        <div class="tab-pane fade" id="product-shipping-tab" role="tabpanel"
-                            aria-labelledby="product-shipping-link">
+                        <div class="tab-pane fade" id="product-shipping-tab" role="tabpanel" aria-labelledby="product-shipping-link">
                             <div class="product-desc-content">
                                 <h3>Delivery & returns</h3>
                                 <p>
@@ -224,70 +196,51 @@
                             <!-- End .product-desc-content -->
                         </div>
                         <!-- .End .tab-pane -->
-
-                        
                     </div>
                     <!-- End .tab-content -->
                 </div>
                 <!-- End .product-details-tab -->
             </div>
         </div>
-        
     </main>
-    <%- include('../layouts/user/footer.ejs') -%>
+<%- include('../layouts/user/footer.ejs') -%>
 
-        
-    
-    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-    <script src="/path/to/script.js"></script>
-    <!-- Include SweetAlert library -->
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+<script src="/path/to/script.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
 
-
-    <script>
-        function addToCart(id) {
-            // Check if the button has the 'disabled' class
-            if ($(`#addToCartBtn_${id}`).hasClass('disabled')) {
-                // If it has, the button is disabled, so you can display a message or take other actions
-                console.log('Product already in the cart');
-                return;
-            }
-    
-            // Add the 'disabled' class to the button to disable it
-            $(`#addToCartBtn_${id}`).addClass('disabled');
-    
-            $.ajax({
-                url: "/addTocart",
-                method: "post",
-                data: {
-                    id: id
-                },
-            }).done((data) => {
-                if (data.success) {
-                    // Product added successfully
-                    Swal.fire({
-                        position: 'center',
-                        icon: 'success',
-                        title: 'Item has been added to Cart',
-                        showConfirmButton: false,
-                        timer: 1000
-                    });
-                } else {
-                    // Failed to add the product
-                    Swal.fire({
-                        position: 'center',
-                        icon: 'error',
-                        title: 'Failed to add the product',
-                        showConfirmButton: false,
-                        timer: 1500
-                    });
-    
-                    // Remove the 'disabled' class to re-enable the button for future attempts
-                    $(`#addToCartBtn_${id}`).removeClass('disabled');
-                }
-            });
+<script>
+    function addToCart(id) {
+        if ($(`#addToCartBtn_${id}`).hasClass('disabled')) {
+            console.log('Product already in the cart');
+            return;
         }
-    </script>
-    
 
- 
+        $(`#addToCartBtn_${id}`).addClass('disabled');
+
+        $.ajax({
+            url: "/addTocart",
+            method: "post",
+            data: { id: id },
+        }).done((data) => {
+            if (data.success) {
+                Swal.fire({
+                    position: 'center',
+                    icon: 'success',
+                    title: 'Item has been added to Cart',
+                    showConfirmButton: false,
+                    timer: 1000
+                });
+            } else {
+                Swal.fire({
+                    position: 'center',
+                    icon: 'error',
+                    title: 'Failed to add the product',
+                    showConfirmButton: false,
+                    timer: 1500
+                });
+                $(`#addToCartBtn_${id}`).removeClass('disabled');
+            }
+        });
+    }
+</script>
