--- a/views/users/profile.ejs
+++ b/views/users/profile.ejs
@@ -33,6 +33,12 @@
                                 <a class="nav-link" id="tab-orders-link" data-toggle="tab" href="#tab-orders" role="tab" aria-controls="tab-orders" aria-selected="false">Orders</a>
                             </li>
                             <li class="nav-item">
+                                <a class="nav-link" id="tab-wallet-link" data-toggle="tab" href="#tab-wallet" role="tab" aria-controls="tab-wallet" aria-selected="false">Wallet</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" id="tab-offers-link" data-toggle="tab" href="#tab-offers" role="tab" aria-controls="tab-offers" aria-selected="false">Coupon</a>
+                            </li>
+                            <li class="nav-item">
                                 <a class="nav-link" id="tab-downloads-link" data-toggle="tab" href="#tab-downloads" role="tab" aria-controls="tab-downloads" aria-selected="false">Downloads</a>
                             </li>
                             <li class="nav-item">
@@ -61,13 +67,18 @@
                             </div><!-- .End .tab-pane -->
 
                             <div class="tab-pane fade" id="tab-orders" role="tabpanel" aria-labelledby="tab-orders-link">
-                                <p>click for more order Details.</p>
-                                <a href="/orders" class="btn btn-outline-primary-2"><span>GO To Orders</span><i class="icon-long-arrow-right"></i></a>
+                                <p>Click for more order details.</p>
+                                <a href="/orders" class="btn btn-outline-primary-2"><span>Go To Orders</span><i class="icon-long-arrow-right"></i></a>
                             </div><!-- .End .tab-pane -->
 
-                            <div class="tab-pane fade" id="tab-downloads" role="tabpanel" aria-labelledby="tab-downloads-link">
-                                <p>No downloads available yet.</p>
-                                <a href="category.html" class="btn btn-outline-primary-2"><span>GO SHOP</span><i class="icon-long-arrow-right"></i></a>
+                            <div class="tab-pane fade" id="tab-wallet" role="tabpanel" aria-labelledby="tab-wallet-link">
+                                <p>Click for more wallet details</p>
+                                <a href="/wallet" class="btn btn-outline-primary-2"><span>Go To Wallet</span><i class="icon-long-arrow-right"></i></a>
+                            </div><!-- .End .tab-pane -->
+
+                            <div class="tab-pane fade" id="tab-offers" role="tabpanel" aria-labelledby="tab-offers-link">
+                                <p>Click for more offer details</p>
+                                <a href="/coupon" class="btn btn-outline-primary-2"><span>Go To coupon</span><i class="icon-long-arrow-right"></i></a>
                             </div><!-- .End .tab-pane -->
 
                             <div class="tab-pane fade" id="tab-address" role="tabpanel" aria-labelledby="tab-address-link">
