--- a/views/users/orderDetails.ejs
+++ b/views/users/orderDetails.ejs
@@ -1,299 +1,241 @@
 <%- include('../layouts/user/header.ejs') %>
 
-
-  <!-- <link
-href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-rel="stylesheet"
-/> -->
-
-  <!-- BREADCRUMB -->
-  <div id="breadcrumb" class="section">
-    <!-- container -->
-    <div class="container">
-      <!-- row -->
-      <div class="row">
-        <div class="col-md-12">
-          <h3 class="breadcrumb-header">Order Details</h3>
-          <ul class="breadcrumb-tree">
-            <li><a href="/">Home</a></li>
-            <li class="active">Order Details</li>
-          </ul>
-        </div>
+<!-- BREADCRUMB -->
+<div id="breadcrumb" class="section">
+  <!-- container -->
+  <div class="container">
+    <!-- row -->
+    <div class="row">
+      <div class="col-md-12">
+        <h3 class="breadcrumb-header">Order Details</h3>
+        <ul class="breadcrumb-tree">
+          <li><a href="/">Home</a></li>
+          <li class="active">Order Details</li>
+        </ul>
       </div>
-      <!-- /row -->
     </div>
-    <!-- /container -->
+    <!-- /row -->
   </div>
-  <!-- /BREADCRUMB -->
+  <!-- /container -->
+</div>
+<!-- /BREADCRUMB -->
 
-  <style type="text/css">
-    body {
-      background: #eee;
-    }
+<style type="text/css">
+  body {
+    background: #f8f9fa;
+  }
 
-    .card {
-      box-shadow: 0 20px 27px 0 rgb(0 0 0 / 5%);
-    }
+  .card {
+    box-shadow: 0 20px 27px 0 rgb(0 0 0 / 5%);
+    border-radius: 1rem;
+  }
 
-    .card {
-      position: relative;
-      display: flex;
-      flex-direction: column;
-      min-width: 0;
-      word-wrap: break-word;
-      background-color: #fff;
-      background-clip: border-box;
-      border: 0 solid rgba(0, 0, 0, 0.125);
-      border-radius: 1rem;
-    }
+  .text-reset {
+    --bs-text-opacity: 1;
+    color: inherit !important;
+  }
 
-    .text-reset {
-      --bs-text-opacity: 1;
-      color: inherit !important;
-    }
+  .order-header {
+    margin-bottom: 20px;
+  }
 
-    a {
-      color: #5465ff;
-      text-decoration: none;
-    }
-  </style>
+  .order-header .breadcrumb-tree {
+    margin: 0;
+    padding: 0;
+  }
 
-  <div class="container-fluid">
-    <div class="container">
-      <div class="d-flex justify-content-between align-items-center py-3" style="margin-left: 5px;">
-        <h2 class="h4 mb-0">
-          <a href="" class="text-muted"> Your tracking ID is: #<%=orders.uniqueId%></a>
-        </h2>
+  .order-header h3 {
+    margin: 0;
+  }
+
+  .table thead th {
+    border-bottom: none;
+  }
+
+  .table tbody tr td {
+    vertical-align: middle;
+  }
+
+  .table .img-fluid {
+    border-radius: 0.5rem;
+  }
+
+  .btn-custom {
+  border: none;
+  border-radius: 5px;
+  padding: 5px 8px; /* Smaller padding */
+  font-size: 12px;   /* Smaller font size */
+  transition: all 0.3s ease;
+  width: auto;      /* Adjust width */
+  min-width: 80px;  /* Set minimum width if needed */
+}
+
+.btn-custom-danger {
+  background-color: #dc3545;
+  color: #fff;
+}
+
+.btn-custom-danger:hover {
+  background-color: #c82333;
+  color: #fff;
+}
+
+.btn-custom-success {
+  background-color: #28a745;
+  color: #fff;
+}
+
+.btn-custom-success:disabled {
+  background-color: #28a745;
+  opacity: 0.65;
+}
+</style>
+
+<div class="container my-5">
+  <div class="order-header">
+    <h2 class="h4">Your tracking ID is: #<%= orders.uniqueId %></h2>
+  </div>
+  <div class="card mb-4 p-4">
+    <div class="mb-3 d-flex justify-content-between align-items-center">
+      <div>
+        <span class="me-3">
+          <%= orders.date.toLocaleDateString('en-US', { year: 'numeric', month: 'short', day: '2-digit' }).replace(/\//g, '-') %>,
+        </span>
+        <span class="me-3">
+          <%= orders.paymentMethod %>
+        </span>
+        <span class="badge bg-info">SHIPPING</span>
       </div>
+      <!-- <div>
+        <button class="btn btn-primary me-3">
+          <i class="bi bi-download"></i> Invoice
+        </button>
+      </div> -->
+    </div>
 
-      <div class="row">
-        <div class="col-lg-12">
-          <div class="card mb-4" style="padding: 20px; margin-bottom: 20px;">
-            <div class="card-body">
-              <div class="mb-3 d-flex justify-content-between"
-                style="display: flex; justify-content: space-between; align-items: center; margin: 10px;">
-                <div>
-                  <span class="me-3"><%=orders.date.toLocaleDateString('en-US', { year: 'numeric' , month: 'short' ,
-                      day: '2-digit' }).replace(/\//g, '-' )%>,</span>
-                  <!-- <span class="me-3">#16123222</span> -->
-                  <span class="me-3">
-                    <%=orders.paymentMethod%>
-                  </span>
-                  <span class="badge rounded-pill bg-info">SHIPPING</span>
+    <table class="table table-borderless">
+      <thead>
+        <tr>
+          <th>Product</th>
+          <th>Quantity</th>
+          <th>Price</th>
+          <th>Status</th>
+          <th>Total</th>
+          <th>Action</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% if (orders && orders.products && orders.products.length > 0) { %>
+          <% orders.products.forEach((product) => { %>
+            <tr>
+              <td>
+                <div class="d-flex align-items-center">
+                  <img src="/public/userimages/<%= product.productId.image %>" alt="Product Image" width="50" class="img-fluid me-3">
+                  <a href="#" class="text-reset">
+                    <%= product.productId.name %>
+                  </a>
                 </div>
-                <div class="d-flex">
-                  <button class="btn btn-primary p-0 me-3 d-none d-lg-block btn-icon-text">
-                    <i class="bi bi-download"></i>
-                    <span class="text">Invoice</span>
-                  </button>
-                  <!-- <div class="dropdown">
-                      <button
-                        class="btn btn-link p-0 text-muted"
-                        type="button"
-                        data-bs-toggle="dropdown"
-                      >
-                        <i class="bi bi-three-dots-vertical"></i>
-                      </button>
-                      <ul class="dropdown-menu dropdown-menu-end">
-                        <li>
-                          <a class="dropdown-item" href="#"
-                            ><i class="bi bi-pencil"></i> Edit</a
-                          >
-                        </li>
-                        <li>
-                          <a class="dropdown-item" href="#"
-                            ><i class="bi bi-printer"></i> Print</a
-                          >
-                        </li>
-                      </ul>
-                    </div> -->
-                </div>
-              </div>
+              </td>
+              <td><%= product.quantity %></td>
+              <% if (product.productId.offer && product.productId.discountedPrice) { %>
+                <td>
+                  <del class="text-danger">₹ <%= product.productId.price %></del> ₹ <%= product.productId.discountedPrice %>
+                </td>
+              <% } else { %>
+                <td>₹ <%= product.productId.price %></td>
+              <% } %>
+              <td>
+                <a href="/orderStatus?id=<%= product._id %>" class="badge bg-dark text-white rounded-pill">
+                  <%= product.orderStatus %>
+                </a>
+              </td>
+              <td>₹ <%= product.quantity * product.productId.price %></td>
+              <td>
+                <% if (product.orderStatus !== 'Cancelled' && product.orderStatus !== 'Delivered') { %>
+                  <button id="cancelButton_<%= product.productId._id %>" class="btn btn-custom btn-custom-danger" onclick="cancelOrder('<%= orders._id %>', '<%= product.productId._id %>', 'cancelButton_<%= product.productId._id %>')">Cancel</button>
+                <% } else if (product.orderStatus === 'Delivered') { %>
+                  <button class="btn btn-custom btn-custom-success" disabled>Delivered</button>
+                <% } else { %>
+                  <button class="btn btn-custom btn-custom-danger" disabled>Cancelled</button>
+                <% } %>
+              </td>
+              
+            </tr>
+          <% }); %>
+        <% } %>
+        <tr>
+          <td colspan="4">Subtotal</td>
+          <td colspan="2" class="text-end">₹ <%= orders.totalAmount %></td>
+        </tr>
+        <tr>
+          <td colspan="4">Shipping</td>
+          <td colspan="2" class="text-end">Free</td>
+        </tr>
+        <tr>
+          <td colspan="4">Discount Coupon</td>
+          <td colspan="2" class="text-end text-danger">-₹00.00</td>
+        </tr>
+        <tr class="fw-bold">
+          <td colspan="4">TOTAL</td>
+          <td colspan="2" class="text-end">₹ <%= orders.totalAmount %></td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
 
-              <table class="table table-borderless">
-                <% if(orders && orders.products && orders.products.length>0){%>
-                  <% orders.products.forEach((products)=>{%>
-                    <tbody>
-                      <tr>
-                        <td>
-                          <div class="d-flex mb-2">
-                            <div class="flex-shrink-0" style="padding: 5px;">
-                              <img src="/public/userimages/<%=products.productId.image%>" alt="Product Image" width="50"
-                                class="img-fluid">
-                            </div>
-                            <div class="flex-lg-grow-1 ms-3" style="padding: 5px;">
-                              <h5 class="align-middle">
-                                <a href="#" class="text-reset">
-                                  <%=products.productId.name%>
-                                </a>
-                              </h5>
-                              <!-- <span class="small">Color: Black</span> -->
-                            </div>
-                          </div>
-                        </td>
-                        <td style="font-weight: bold; padding-right: 10px;">
-                          <%=products.quantity%>
-                        </td>
-                        <td style="font-weight: bold;">₹ <%=products.productId.price%>
-                        </td>
-
-                        <td class="text-end" style="text-align: end;">
-                          <a href="/orderStatus?id=<%=products._id%>" class="text-decoration-none">
-                            <span class="badge bg-dark text-white rounded-pill"
-                              style="font-size: 14px; padding: 8px 12px;">
-                              <%=products.orderStatus%>
-                            </span>
-                          </a>
-
-
-                        </td>
-                        <td class="text-end font-weight-bold" style="text-align: end;">₹ <%=products.quantity * products.productId.price%>
-                        </td>
-                        <td class="text-end font-weight-bold" style="text-align: end;">
-                          <% if (products.orderStatus !== 'Cancelled' && products.orderStatus !== 'Delivered') { %>
-                              <button id="cancelButton_<%= products.productId._id %>" class="btn-danger"
-                                      onclick="cancelOrder('<%= orders._id %>', '<%= products.productId._id %>', 'cancelButton_<%= products.productId._id %>')">Cancel</button>
-                          <% } else if (products.orderStatus === 'Delivered') { %>
-                              <button class="btn-success" disabled>Delivered</button>
-                          <% } else { %>
-                              <button class="btn-danger" disabled>Cancelled</button>
-                          <% } %>
-                      </td>
-                      
-                           
-                      </tr>
-                    </tbody>
-
-                    <% }); %>
-                      <% } %>
-                        <tbody>
-                          <tr>
-                            <td colspan="3">Subtotal</td>
-                            <td class="text-end" style="text-align: end;">₹ <%=orders.totalAmount%>
-                            </td>
-                          </tr>
-                          <tr>
-                            <td colspan="3">Shipping</td>
-                            <td class="text-end" style="text-align: end;">Free</td>
-                          </tr>
-                          <tr>
-                            <td colspan="3">Discount Coupon</td>
-                            <td class="text-danger text-end" style="text-align: end;">-₹00.00</td>
-                          </tr>
-                          <tr class="fw-bold" style="font-weight: bold;">
-                            <td colspan="3">TOTAL</td>
-                            <td class="text-end" style="text-align: end;">₹ <%=orders.totalAmount%>
-                            </td>
-                          </tr>
-                        </tbody>
-              </table>
-            </div>
-          </div>
-
-          <div class="card mb-4" style="border-radius: 1rem;padding: 20px; margin-bottom: 30px;">
-            <div class="card-body">
-              <div class="row">
-                <div class="col-lg-6">
-                  <h3 class="h6">Payment Method</h3>
-                  <p>
-                    <%=orders.paymentMethod%> <br />
-                      Total: ₹<%=orders.totalAmount%>
-                        <% orders.products.forEach((data)=>{%>
-                          <span class="badge bg-success rounded-pill">
-                            <%=data.paymentStatus%>
-                          </span>
-                          <% }); %>
-                  </p>
-                </div>
-                <div class="col-lg-6">
-                  <h3 class="h5">Billing address</h3>
-                  <address>
-                    <p>
-                      <%=orders.deliveryDetails%>
-                    </p>
-                  </address>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- <div class="col-lg-4"> -->
-        <!-- <div class="card mb-4" style="border-radius: 1rem; padding: 20px;">
-              <div class="card-body">
-                <h3 class="h6">Customer Notes</h3>
-                <p>
-                  Sed enim, faucibus litora velit vestibulum habitasse. Cras
-                  lobortis cum sem aliquet mauris rutrum. Sollicitudin. Morbi,
-                  sem tellus vestibulum porttitor.
-                </p>
-              </div>
-            </div> -->
-        <!-- <div class="card mb-4" style="border-radius: 1rem; padding: 20px;">
-              <div class="card-body">
-                <h3 class="h6">Shipping Information</h3>
-                <strong>FedEx</strong>
-                <span
-                  ><a href="#" class="text-decoration-underline" target="_blank"
-                    > Your tracking ID is: #<%=orders.uniqueId%></a
-                  >
-                  <i class="bi bi-box-arrow-up-right"></i>
-                </span>
-                <hr />
-                <h3 class="h6">Address</h3>
-                <address>
-                  <p><%=orders.deliveryDetails%></p><br />
-                </address>
-              </div>
-            </div> -->
-        <!-- </div> -->
+  <div class="card mb-4 p-4">
+    <div class="row">
+      <div class="col-lg-6">
+        <h5>Payment Method</h5>
+        <p>
+          <%= orders.paymentMethod %> <br />
+          Total: ₹<%= orders.totalAmount %>
+          <% orders.products.forEach((data) => { %>
+            <span class="badge bg-success rounded-pill"><%= data.paymentStatus %></span>
+          <% }); %>
+        </p>
+      </div>
+      <div class="col-lg-6">
+        <h5>Billing Address</h5>
+        <p><%= orders.deliveryDetails %></p>
       </div>
     </div>
   </div>
+</div>
 
-  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
 
-  <script>
-    function cancelOrder(uniqueId, productId, buttonId) {
-      console.log('buttonId', buttonId);
-      // Display confirmation dialog using SweetAlert
-      Swal.fire({
-        title: 'Are you sure?',
-        text: 'You want to cancel this order?',
-        icon: 'warning',
-        showCancelButton: true,
-        confirmButtonColor: '#3085d6',
-        cancelButtonColor: '#d33',
-        confirmButtonText: 'Yes, cancel it!'
-      }).then((result) => {
-        if (result.isConfirmed) {
-          // User clicked the confirm button, proceed with the cancellation
-          $.ajax({
-            url: '/cancelOrder',
-            method: 'post',
-            data: { uniqueId, productId },
-            success: function (response) {
-              console.log(response);
-              if (response.cancel == 1) {
-                location.reload(); // Reload the page to reflect the change
-              } else {
-                Swal.fire('Error', 'Order could not be cancelled. It may have been delivered already.', 'error');
-              }
-            },
-            error: function (error) {
-              console.error("Error:", error);
+<script>
+  function cancelOrder(uniqueId, productId, buttonId) {
+    Swal.fire({
+      title: 'Are you sure?',
+      text: 'You want to cancel this order?',
+      icon: 'warning',
+      showCancelButton: true,
+      confirmButtonColor: '#3085d6',
+      cancelButtonColor: '#d33',
+      confirmButtonText: 'Yes, cancel it!'
+    }).then((result) => {
+      if (result.isConfirmed) {
+        $.ajax({
+          url: '/cancelOrder',
+          method: 'post',
+          data: { uniqueId, productId },
+          success: function (response) {
+            if (response.cancel == 1) {
+              location.reload(); // Reload the page to reflect the change
+            } else {
+              Swal.fire('Error', 'Order could not be cancelled. It may have been delivered already.', 'error');
             }
-          });
-          // Disable the button after cancellation
-          document.getElementById(buttonId).disabled = true;
-        }
-      });
-    }
-  </script>
-  
+          },
+          error: function (error) {
+            console.error("Error:", error);
+          }
+        });
+        document.getElementById(buttonId).disabled = true;
+      }
+    });
+  }
+</script>
 
-
-
-
-
-
-  <%- include('../layouts/user/footer.ejs') %>
+<%- include('../layouts/user/footer.ejs') %>
