--- a/views/users/wallet.ejs
+++ b/views/users/wallet.ejs
@@ -163,7 +163,7 @@
       key: 'rzp_test_OOxrpqsR7Y8V4y',
       amount: order.amount * 100,
       currency: 'INR',
-      name: 'Power_Electricals',
+      name: 'specart',
       description: 'Test Transaction',
       image: '/images/my_Logo.png',
       order_id: order.id,
